Introduce/login alias (#68)
* Add alias login

* Update highway types, add query alias method

* Standalone attest/assert methods

* Remove Nebula

* Broadcast TX in goroutine

* Update types for chainID

* Reorganize imports, merge vault with x/identity keeper, add alias check for validating Primary Identities

* Reorganize imports, merge vault with x/identity keeper, add alias check for validating Primary Identities

---------
