# x/identity/keeper/query.go
@@ -51,15 +51,25 @@ func (k Keeper) Did(c context.Context, req *types.QueryGetDidRequest) (*types.Qu
 		return nil, status.Error(codes.InvalidArgument, "invalid request")
 	}
 	ctx := sdk.UnwrapSDKContext(c)
-
-	val, found := k.GetPrimaryIdentity(
-		ctx,
-		req.Did,
-	)
-	if !found {
-		return nil, status.Error(codes.NotFound, "not found")
+	if strings.Contains(req.Did, "did:sonr") {
+		val, found := k.GetPrimaryIdentity(
+			ctx,
+			req.Did,
+		)
+		if !found {
+			return nil, status.Error(codes.NotFound, "not found")
+		}
+		return &types.QueryGetDidResponse{DidDocument: val}, nil
+	} else {
+		val, found := k.GetPrimaryIdentityByAddress(
+			ctx,
+			req.Did,
+		)
+		if !found {
+			return nil, status.Error(codes.NotFound, "not found")
+		}
+		return &types.QueryGetDidResponse{DidDocument: val}, nil
 	}
-	return &types.QueryGetDidResponse{DidDocument: *&val}, nil
 }
 
 func (k Keeper) DidByKeyID(c context.Context, req *types.QueryDidByKeyIDRequest) (*types.QueryDidByKeyIDResponse, error) {
@@ -78,7 +88,7 @@ func (k Keeper) DidByKeyID(c context.Context, req *types.QueryDidByKeyIDRequest)
 	if !found {
 		return nil, status.Error(codes.NotFound, "not found")
 	}
-	return &types.QueryDidByKeyIDResponse{DidDocument: *&val}, nil
+	return &types.QueryDidByKeyIDResponse{DidDocument: val}, nil
 }
 
 func (k Keeper) DidByAlsoKnownAs(c context.Context, req *types.QueryDidByAlsoKnownAsRequest) (*types.QueryDidByAlsoKnownAsResponse, error) {
@@ -87,7 +97,6 @@ func (k Keeper) DidByAlsoKnownAs(c context.Context, req *types.QueryDidByAlsoKno
 	}
 	return nil, status.Error(codes.NotFound, "not found")
 }
-
 
 // ! ||--------------------------------------------------------------------------------||
 // ! ||                               Module Params Query                              ||
@@ -100,4 +109,45 @@ func (k Keeper) Params(c context.Context, req *types.QueryParamsRequest) (*types
 	ctx := sdk.UnwrapSDKContext(c)
 
 	return &types.QueryParamsResponse{Params: k.GetParams(ctx)}, nil
+}
+
+func (k Keeper) AliasAvailable(goCtx context.Context, req *types.QueryAliasAvailableRequest) (*types.QueryAliasAvailableResponse, error) {
+	if req == nil {
+		return nil, status.Error(codes.InvalidArgument, "invalid request")
+	}
+
+	ctx := sdk.UnwrapSDKContext(goCtx)
+	alMap := k.GetAllAlsoKnownAs(ctx)
+
+	for did, al := range alMap {
+		if contains(al, req.Alias) {
+			doc, found := k.GetPrimaryIdentity(ctx, did)
+			if !found {
+				return nil, status.Error(codes.NotFound, "not found")
+			}
+			return &types.QueryAliasAvailableResponse{Available: false, ExistingDocument: &doc}, nil
+		}
+	}
+	return &types.QueryAliasAvailableResponse{Available: true}, nil
+}
+
+func contains(s []string, e string) bool {
+	for _, a := range s {
+		if a == e {
+			return true
+		}
+	}
+	return false
+}
+func containsAny(s1 []string, s2 []string) bool {
+	m := make(map[string]bool)
+	for _, a := range s1 {
+		m[a] = true
+	}
+	for _, a := range s2 {
+		if m[a] {
+			return true
+		}
+	}
+	return false
 }
